# pars2tab

./: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  ascdm.pc  configure  configure.ac  pars2tab.cc  pars2tab.t  pars2tab.xml  readline.pc  region.pc
lib/pkgconfig/: ascdm.pc.in  readline.pc  readline.pc.in  region.pc.in
src/: Makefile.am  Makefile.in  pars2tab.cc  pars2tab.par
test/: Makefile.am  Makefile.in  pars2tab.t
wrapper/: Makefile.in
